Update Cors conditions and added ssl